Reimplementation of GetRequisitionPack
Metadata endpoint 'Requisition Packs' no longer returns all Req Packs,
instead not returns a single Req Pack by Id.

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Query\Metadata\GetMapVariantTests.cs" />
     <Compile Include="Query\Metadata\GetMedalsTests.cs" />
     <Compile Include="Query\Metadata\GetPlaylistsTests.cs" />
-    <Compile Include="Query\Metadata\GetRequisitionPacksTests.cs" />
+    <Compile Include="Query\Metadata\GetRequisitionPackTests.cs" />
     <Compile Include="Query\Metadata\GetRequisitionTests.cs" />
     <Compile Include="Query\Metadata\GetSpartanRanksTests.cs" />
     <Compile Include="Query\Metadata\GetTeamColorsTests.cs" />
