--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utility\SerializationUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Metadata\GetCommendationsTests.cs" />
     <Compile Include="Query\Metadata\GetCampaignMissionsTests.cs" />
