--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Model\Metadata\CampaignMission.cs" />
     <Compile Include="Model\Metadata\CompetitiveSkillRankDesignation.cs" />
     <Compile Include="Model\Metadata\Skull.cs" />
+    <Compile Include="Model\Profile\GetImage.cs" />
     <Compile Include="Model\Stats\CarnageReport\CampaignMatch.cs" />
     <Compile Include="Model\Stats\Common\FlexibleStats.cs" />
     <Compile Include="Model\Stats\Common\CompetitiveSkillRanking.cs" />
