Update travis-ci.org config after move.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: csharp
-solution: HaloSharp.sln
+solution: ./Source/HaloSharp.sln
 install:
-  - nuget restore HaloSharp.sln
+  - nuget restore ./Source/HaloSharp.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release HaloSharp.sln
-  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./HaloSharp.Tests/bin/Release/HaloSharp.Test.dll
+  - xbuild /p:Configuration=Release ./Source/HaloSharp.sln
+  - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Source/HaloSharp.Tests/bin/Release/HaloSharp.Test.dll
 mono:
   - latest
