--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Cache.cs" />
     <Compile Include="Converter\TimeSpanConverter.cs" />
+    <Compile Include="Exception\ValidationException.cs" />
     <Compile Include="Exception\HaloApiException.cs" />
     <Compile Include="Extension\HaloSharpSessionExtensions.cs" />
     <Compile Include="Extension\StringExtensions.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="HaloClient.cs" />
     <Compile Include="IQuery.cs" />
     <Compile Include="Model\Enumeration.cs" />
+    <Compile Include="Model\Error\ValidationError.cs" />
     <Compile Include="Model\Error\HaloApiError.cs" />
     <Compile Include="Model\Metadata\Season.cs" />
     <Compile Include="Model\Metadata\FlexibleStat.cs" />
@@ -109,6 +111,7 @@
     <Compile Include="Model\Stats\Lifetime\ArenaServiceRecord.cs" />
     <Compile Include="Model\Stats\Common\Link.cs" />
     <Compile Include="Model\Stats\MatchSet.cs" />
+    <Compile Include="Model\ValidationResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Metadata\GetSeasons.cs" />
     <Compile Include="Query\Metadata\GetCommendations.cs" />
@@ -142,6 +145,22 @@
     <Compile Include="Query\Stats\Lifetime\GetWarzoneServiceRecord.cs" />
     <Compile Include="Query\Stats\Lifetime\GetArenaServiceRecord.cs" />
     <Compile Include="RateGate.cs" />
+    <Compile Include="Validation\Common\GamertagValidator.cs" />
+    <Compile Include="Validation\Metadata\GetRequisitionPackValidator.cs" />
+    <Compile Include="Validation\Metadata\GetRequisitionValidator.cs" />
+    <Compile Include="Validation\Metadata\GetMapVariantValidator.cs" />
+    <Compile Include="Validation\Metadata\GetGameVariantValidator.cs" />
+    <Compile Include="Validation\Profile\GetSpartanImageValidator.cs" />
+    <Compile Include="Validation\Profile\GetEmblemImageValidator.cs" />
+    <Compile Include="Validation\Stats\CarnageReport\GetArenaMatchDetailsValidator.cs" />
+    <Compile Include="Validation\Stats\CarnageReport\GetCampaignMatchDetailsValidator.cs" />
+    <Compile Include="Validation\Stats\CarnageReport\GetCustomMatchDetailsValidator.cs" />
+    <Compile Include="Validation\Stats\CarnageReport\GetWarzoneMatchDetailsValidator.cs" />
+    <Compile Include="Validation\Stats\GetMatchesValidator.cs" />
+    <Compile Include="Validation\Stats\Lifetime\GetArenaServiceRecordValidator.cs" />
+    <Compile Include="Validation\Stats\Lifetime\GetWarzoneServiceRecordValidator.cs" />
+    <Compile Include="Validation\Stats\Lifetime\GetCustomServiceRecordValidator.cs" />
+    <Compile Include="Validation\Stats\Lifetime\GetCampaignServiceRecordValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
