Fix for unhandled HighestCsrSeasonId values.
HighestCsrSeasonId would sometimes return the string 'NonSeasonal'
instead of null or a Guid. Breaking everything.

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Converter\TimeSpanConverterTests.cs" />
+    <Compile Include="Converter\GuidConverterTests.cs" />
     <Compile Include="Query\Metadata\GetSeasonsTests.cs" />
     <Compile Include="Query\Metadata\GetCampaignMissionsTests.cs" />
     <Compile Include="Query\Metadata\GetCommendationsTests.cs" />
