Extension of cache flexibility.
Added cache expiration and the ability to set expiration different
periods for different endpoint groupings (metadata, profile, stats).

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache\CacheTests.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Converter\TimeSpanConverterTests.cs" />
     <Compile Include="Converter\GuidConverterTests.cs" />
