--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Model\Metadata\CampaignMission.cs" />
     <Compile Include="Model\Metadata\CompetitiveSkillRankDesignation.cs" />
     <Compile Include="Model\Metadata\Skull.cs" />
+    <Compile Include="Model\CacheSettings.cs" />
     <Compile Include="Model\Profile\GetImage.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\Stats\CarnageReport\CampaignMatch.cs" />
