--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -89,7 +89,6 @@
     <Compile Include="Query\Stats\Lifetime\GetWarzoneServiceRecordTests.cs" />
     <Compile Include="Schema\SchemaTests.cs" />
     <Compile Include="Serialization\SerializationTests.cs" />
-    <Compile Include="CacheTests.cs" />
     <Compile Include="Utility\SchemaUtility.cs" />
     <Compile Include="Utility\SerializationUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -329,9 +328,7 @@
       <Name>HaloSharp</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
