Add carnage report events endpoint.

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Query\Metadata\GetTeamColorsTests.cs" />
     <Compile Include="Query\Metadata\GetVehiclesTests.cs" />
     <Compile Include="Query\Metadata\GetWeaponsTests.cs" />
+    <Compile Include="Query\Stats\CarnageReport\GetMatchEventsTests.cs" />
     <Compile Include="Query\Stats\CarnageReport\GetArenaMatchDetailsTests.cs" />
     <Compile Include="Query\Stats\CarnageReport\GetCampaignMatchDetailsTests.cs" />
     <Compile Include="Query\Stats\CarnageReport\GetCustomMatchDetailsTests.cs" />
@@ -225,6 +226,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="JSON\Metadata\Common\reward.schema.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="JSON\Stats\CarnageReport\match-events.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="JSON\Stats\CarnageReport\match-events.schema.json.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="JSON\Stats\CarnageReport\campaign-match.schema.json">
