Organise queries by game. Round 2.

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -389,7 +389,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="JSON\Halo5Forge\" />
     <Folder Include="JSON\HaloWars2\" />
+    <Folder Include="Query\Halo5Forge\" />
     <Folder Include="Query\HaloWars2\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
