--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -226,6 +226,9 @@
     <Compile Include="Model\Halo5\UserGeneratedContent\Common\Stats.cs" />
     <Compile Include="Model\ValidationResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\Halo5Forge\Stats\CarnageReport\GetCustomMatchDetails.cs" />
+    <Compile Include="Query\Halo5Forge\Stats\Lifetime\GetCustomServiceRecord.cs" />
+    <Compile Include="Query\Halo5Forge\Stats\GetMatches.cs" />
     <Compile Include="Query\Halo5\Metadata\GetSeasons.cs" />
     <Compile Include="Query\Halo5\Metadata\GetCommendations.cs" />
     <Compile Include="Query\Halo5\Metadata\GetCampaignMissions.cs" />
@@ -362,7 +365,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\Halo5Forge\" />
-    <Folder Include="Query\Halo5Forge\" />
     <Folder Include="Response\HaloWars2\Stats\" />
     <Folder Include="Validation\Halo5Forge\" />
   </ItemGroup>
