--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -239,7 +239,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\Halo5Forge\Stats\CarnageReport\GetCustomMatchDetails.cs" />
     <Compile Include="Query\Halo5Forge\Stats\Lifetime\GetCustomServiceRecord.cs" />
-    <Compile Include="Query\Halo5Forge\Stats\GetMatches.cs" />
+    <Compile Include="Query\Halo5Forge\Stats\GetMatchHistory.cs" />
     <Compile Include="Query\Halo5\Metadata\GetSeasons.cs" />
     <Compile Include="Query\Halo5\Metadata\GetCommendations.cs" />
     <Compile Include="Query\Halo5\Metadata\GetCampaignMissions.cs" />
@@ -268,7 +268,7 @@
     <Compile Include="Query\Halo5\Stats\CarnageReport\GetArenaMatchDetails.cs" />
     <Compile Include="Query\Halo5\Stats\CarnageReport\GetCampaignMatchDetails.cs" />
     <Compile Include="Query\Halo5\Stats\GetLeaderboard.cs" />
-    <Compile Include="Query\Halo5\Stats\GetMatches.cs" />
+    <Compile Include="Query\Halo5\Stats\GetMatchHistory.cs" />
     <Compile Include="Query\Halo5\Stats\Lifetime\GetCampaignServiceRecord.cs" />
     <Compile Include="Query\Halo5\Stats\Lifetime\GetCustomServiceRecord.cs" />
     <Compile Include="Query\Halo5\Stats\Lifetime\GetWarzoneServiceRecord.cs" />
@@ -322,7 +322,7 @@
     <Compile Include="Query\HaloWars2\Stats\Lifetime\GetPlaylistRatings.cs" />
     <Compile Include="Query\HaloWars2\Stats\GetMatchHistory.cs" />
     <Compile Include="Query\HaloWars2\Stats\Lifetime\GetCampaignSummary.cs" />
-    <Compile Include="Query\HaloWars2\Stats\CarnageReport\GetMatch.cs" />
+    <Compile Include="Query\HaloWars2\Stats\CarnageReport\GetMatchDetails.cs" />
     <Compile Include="RateGate.cs" />
     <Compile Include="Validation\Common\GamertagValidator.cs" />
     <Compile Include="Validation\Halo5\Metadata\GetRequisitionPackValidator.cs" />
