--- a/Source/HaloSharp/HaloSharp.nuspec
+++ b/Source/HaloSharp/HaloSharp.nuspec
@@ -11,7 +11,7 @@
     <iconUrl>http://i.imgur.com/bNFI8wr.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Updated RequisitionPack model after API update.</releaseNotes>
+    <releaseNotes>Halo 5, Halo 5 : Forge, Halo Wars 2!</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>HaloSharp, Halo, API, Game Data</tags>
   </metadata>
