--- a/Source/HaloSharp/HaloSharp.csproj
+++ b/Source/HaloSharp/HaloSharp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Model\Halo5\Metadata\Skull.cs" />
     <Compile Include="Model\CacheSettings.cs" />
     <Compile Include="Model\Halo5\Profile\HaloImage.cs" />
+    <Compile Include="Model\Halo5\Profile\PlayerAppearance.cs" />
     <Compile Include="Model\Halo5\Stats\CarnageReport\Events\Death.cs" />
     <Compile Include="Model\Halo5\Stats\CarnageReport\Events\Impulse.cs" />
     <Compile Include="Model\Halo5\Stats\CarnageReport\Events\MatchEvent.cs" />
