Add schema.JSON and sample response for unit tests.

--- a/Source/HaloSharp.Test/HaloSharp.Test.csproj
+++ b/Source/HaloSharp.Test/HaloSharp.Test.csproj
@@ -391,6 +391,7 @@
     <None Include="JSON\Halo5\Stats\matches.schema.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="JSON\Halo5\Stats\spartan-company.json" />
     <None Include="JSON\Halo5\UserGeneratedContent\Common\stats.schema.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
